# MwXdump-rs

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: README.md  architecture-design.md  cli-options-architecture.md  cli-options-implementation-plan.md  decrypt-analysis.md  decrypt-implementation-plan.md  documentation-standards.md  milestone-report.md  phase2-architecture.md  phase2-plan.md  phase2-progress.md  phase2-roadmap.md  phase2-summary.md  version-support-policy.md  wechat-data-directory-enhancement-completion.md  wechat-data-directory-enhancement.md  wechat-process-refactor-completion.md  wechat-process-refactor-diagram.md  wechat-process-refactor-plan-revised.md
docs/status/: 2025-07-06-evening-status-update.md  2025-07-06-status-update.md
src/: lib.rs  main.rs
src/app/: manager.rs  mod.rs
src/cli/: context.rs  mod.rs
src/cli/commands/: decrypt.rs  dump_memory.rs  key.rs  process.rs  server.rs  version.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/repository/: mod.rs
src/errors/: mod.rs
src/http/: mod.rs
src/http/handlers/: mod.rs
src/http/middleware/: mod.rs
src/mcp/: mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/utils/: mod.rs  win_memory.rs  win_process.rs  win_process_detector.rs  win_registry.rs  windows_registry.rs
src/utils/windows/: handler.rs  memory.rs  mod.rs  process.rs  process.rs.bak
src/wechat/: mod.rs  wechat_version.rs
src/wechat/decrypt/: common.rs  mod.rs  v3.rs  v4.rs  validator.rs
src/wechat/key/: mod.rs  windows.rs  windows1111.rs.bak
src/wechat/key/windows/: key_extractor_v4.rs  memory.rs  mod.rs  v3.rs  v4.rs  winapi.rs
src/wechat/process/: macos.rs  mod.rs  process_detector.rs  wechat_process_info.rs  windows.rs
src/wechat/process/windows/: mod.rs  windows.rs  windows_process_detector.rs
src/wechatdb/: mod.rs
test_data/: key
