[package]
name = "MwXdump-rs"
version = "0.1.0"
edition = "2021"
authors = ["Magic"]
description = "微信聊天管理工具 - Rust版本"
license = "AGPL-3"
repository = "https://github.com/m66kkm/MwXdump-rs"
keywords = ["wechat", "chat", "log"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "mwx-cli"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web框架
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
hyper = { version = "1.6", features = ["full"] }

# Terminal UI
ratatui = "0.29.0"
crossterm = "0.29"

# 命令行
clap = { version = "4.5", features = ["derive", "env"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8"
prost = "0.14"
prost-types = "0.14"

# 错误处理
thiserror = "2.0.12"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 加密解密
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
zeroize = "1.8"
byteorder = "1.5"

# 压缩
lz4 = "1.28"
flate2 = "1.1"

# 配置
config = "^0.15"
toml = "^0.9"

# 工具
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1.11"
once_cell = "1.21"
lazy_static = "1.5"
dirs = "6.0"

# 系统信息
sysinfo = "^0.36"
num_cpus = "1.17"

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 文件监控
notify = "8.1"

crossbeam-channel = "0.5"

rmcp = { version = "0.2.1", features = ["server"] }


# 平台特定
[target.'cfg(windows)'.dependencies]
windows = {version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Foundation",     
    "Win32_System_SystemInformation",  
    "Win32_System_Registry",           
    "Win32_Storage_FileSystem",        
    "Win32_System_WindowsProgramming",   
] }
windows-result = {version = "0.3"}

[target.'cfg(target_os = "macos")'.dependencies]
libc = "^0.2.173"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.20"
mockall = "0.13.1"

[build-dependencies]
prost-build = "^0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true